mobile nav menu comes in from right side, fixed overflow issues using overflow-x clip

--- a/index.css
+++ b/index.css
@@ -32,6 +32,8 @@ header {
   opacity: 1;
   z-index: 10;
   transition: all 0.3s ease-out;
+  overflow-x: clip;
+  /* overflow-x: hidden; */
 }
 
 header.hide {
@@ -1239,8 +1241,10 @@ main {
     background-color: white;
     position: absolute;
     top: 4rem;
-    left: 0;
-    left: -100%;
+    /* left: 0; */
+    right: 0;
+    /* left: -100%; */
+    right: -100%;
     display: flex;
     flex-direction: column;
     align-items: center;
